--- a/components/synedit/languages/synedit.de.po
+++ b/components/synedit/languages/synedit.de.po
@@ -1,212 +1,223 @@
+msgid ""
+msgstr ""
+"Project-Id-Version: \n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: 2005-08-26 18:29+0100\n"
+"Last-Translator: Jörg Braun <jb@toolbox-mag.de>\n"
+"Language-Team: \n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
+"Content-Transfer-Encoding: 8bit\n"
+
 #: syneditstrconst:syns_scrollinfofmt
 msgid "%d - %d"
-msgstr ""
+msgstr "%d - %d"
 
 #: syneditstrconst:syns_filterasm68hc11
 msgid "68HC11 Assembler Files (*.hc11,*.asm,*.asc)|*.HC11;*.ASM;*.ASC"
-msgstr ""
+msgstr "68HC11-Assembler-Dateien (*.hc11,*.asm,*.asc)|*.HC11;*.ASM;*.ASC"
 
 #: syneditstrconst:syns_shortcutnone
 msgid "<none>"
-msgstr ""
+msgstr "<keine>"
 
 #: syneditstrconst:syns_filterawk
 msgid "AWK Script (*.awk)|*.awk"
-msgstr ""
+msgstr "AWK-Skripten (*.awk)|*.awk"
 
 #: syneditstrconst:syns_filterbaan
 msgid "Baan 4GL Files (*.cln)|*.cln"
-msgstr ""
+msgstr "Baan-4GL-Dateien (*.cln)|*.cln"
 
 #: syneditstrconst:syns_filterdfm
 msgid "Borland Form Files (*.dfm;*.xfm)|*.dfm;*.xfm"
-msgstr ""
+msgstr "Borland-Form-Dateien (*.dfm;*.xfm)|*.dfm;*.xfm"
 
 #: syneditstrconst:syns_filtercpp
 msgid "C++ Files (*.c,*.cpp,*.h,*.hpp)|*.c;*.cpp;*.h;*.hpp"
-msgstr ""
+msgstr "C++-Quellen und -Header (*.c,*.cpp,*.h,*.hpp)|*.c;*.cpp;*.h;*.hpp"
 
 #: syneditstrconst:syns_filtercaclipper
 msgid "CA-Clipper Files (*.prg,*.ch,*.inc)|*.prg;*.ch;*.inc"
-msgstr ""
+msgstr "CA-Clipper-Quelltexte (*.prg,*.ch,*.inc)|*.prg;*.ch;*.inc"
 
 #: syneditstrconst:syns_filtercorbaidl
 msgid "CORBA IDL files (*.idl)|*.idl"
-msgstr ""
+msgstr "CORBA-IDL-Dateien (*.idl)|*.idl"
 
 #: syneditstrconst:syns_filtercpm
 msgid "CPM reports (*.rdf,*.rif,*.rmf,*.rxf)|*.rdf;*.rif;*.rmf;*.rxf"
-msgstr ""
+msgstr "CPM-Reports (*.rdf,*.rif,*.rmf,*.rxf)|*.rdf;*.rif;*.rmf;*.rxf"
 
 #: syneditstrconst:syns_filtercache
 msgid "Cache Files (*.mac,*.inc,*.int)|*.mac;*.inc;*.int"
-msgstr ""
+msgstr "Cache-Dateien (*.mac,*.inc,*.int)|*.mac;*.inc;*.int"
 
 #: syneditstrconst:syns_filtercss
 msgid "Cascading Stylesheets (*.css)|*.css"
-msgstr ""
+msgstr "Cascading Stylesheets (*.css)|*.css"
 
 #: syneditstrconst:syns_filteradsp21xx
 msgid "DSP Files (*.dsp,*.inc)|*.DSP;*.INC"
-msgstr ""
+msgstr "DSP-Dateien (*.dsp,*.inc)|*.DSP;*.INC"
 
 #: syneditstrconst:syns_filterfortran
 msgid "Fortran Files (*.for)|*.for"
-msgstr ""
+msgstr "Fortran-Quelltexte (*.for)|*.for"
 
 #: syneditstrconst:syns_filterfoxpro
 msgid "Foxpro Files (*.prg)|*.prg"
-msgstr ""
+msgstr "Foxpro-Quelltexte (*.prg)|*.prg"
 
 #: syneditstrconst:syns_filtergembase
 msgid "GEMBASE Files (*.dml,*.gem)|*.DML;*.GEM"
-msgstr ""
+msgstr "GEMBASE-Dateien (*.dml,*.gem)|*.DML;*.GEM"
 
 #: syneditstrconst:syns_filtergws
 msgid "GW-TEL Script Files (*.gws)|*.gws"
-msgstr ""
+msgstr "GW-TEL-Skripten (*.gws)|*.gws"
 
 #: syneditstrconst:syns_filtergalaxy
 msgid "Galaxy Files (*.gtv,*.galrep,*.txt)|*.gtv;*.galrep;*.txt"
-msgstr ""
+msgstr "Galaxy-Dateien (*.gtv,*.galrep,*.txt)|*.gtv;*.galrep;*.txt"
 
 #: syneditstrconst:syns_filterhp
 msgid "HP48 Files (*.s,*.sou,*.a,*.hp)|*.S;*.SOU;*.A;*.HP"
-msgstr ""
+msgstr "HP48-Dateien (*.s,*.sou,*.a,*.hp)|*.S;*.SOU;*.A;*.HP"
 
 #: syneditstrconst:syns_filterhp48
 msgid "HP48 Files (*.s,*.sou,*.a,*.hp)|*.s;*.sou;*.a;*.hp"
-msgstr ""
+msgstr "HP48-Dateien (*.s,*.sou,*.a,*.hp)|*.s;*.sou;*.a;*.hp"
 
 #: syneditstrconst:syns_exporterformathtml
 msgid "HTML"
-msgstr ""
+msgstr "HTML"
 
 #: syneditstrconst:syns_filterhtml
 msgid "HTML Document (*.htm,*.html)|*.htm;*.html"
-msgstr ""
+msgstr "HTML-Dokumente (*.htm,*.html)|*.htm;*.html"
 
 #: syneditstrconst:syns_filterini
 msgid "INI Files (*.ini)|*.ini"
-msgstr ""
+msgstr "INI-Dateien (*.ini)|*.ini"
 
 #: syneditstrconst:syns_filterinno
 msgid "Inno Setup Script Files (*.iss)|*.iss"
-msgstr ""
+msgstr "Inno Setup-Skripten (*.iss)|*.iss"
 
 #: syneditstrconst:syns_filterjava
 msgid "Java Files (*.java)|*.java"
-msgstr ""
+msgstr "Java-Quelltexte (*.java)|*.java"
 
 #: syneditstrconst:syns_filterjscript
 msgid "Javascript Files (*.js)|*.js"
-msgstr ""
+msgstr "Javascript-Dateien (*.js)|*.js"
 
 #: syneditstrconst:syns_filterkix
 msgid "KiXtart scripts (*.kix)|*.kix"
-msgstr ""
+msgstr "KiXtart-Skripte (*.kix)|*.kix"
 
 #: syneditstrconst:syns_filterlfm
 msgid "Lazarus Form Files (*.lfm)|*.lfm"
-msgstr ""
+msgstr "Lazarus-Form-Dateien (*.lfm)|*.lfm"
 
 #: syneditstrconst:syns_filterbatch
 msgid "MS-DOS Batch Files (*.bat;*.cmd)|*.bat;*.cmd"
-msgstr ""
+msgstr "MS-DOS-/Windows-Batchdateien (*.bat;*.cmd)|*.bat;*.cmd"
 
 #: syneditstrconst:syns_filtermodelica
 msgid "Modelica Files (*.mo)|*.mo"
-msgstr ""
+msgstr "Modelica-Dateien (*.mo)|*.mo"
 
 #: syneditstrconst:syns_filtermodula3
 msgid "Modula-3 Files (*.m3)|*.m3"
-msgstr ""
+msgstr "Modula-3-Quelltexte (*.m3,*mod)|*.m3;*.mod"
 
 #: syneditstrconst:syns_filtersyngenmsgfiles
 msgid "Msg files (*.msg)|*.msg"
-msgstr ""
+msgstr "Msg-Dateien (*.msg)|*.msg"
 
 #: syneditstrconst:syns_filterphp
 msgid "PHP Files (*.php,*.php3,*.phtml,*.inc)|*.php;*.php3;*.phtml;*.inc"
-msgstr ""
+msgstr "PHP-Dateien (*.php,*.php3,*.phtml,*.inc)|*.php;*.php3;*.phtml;*.inc"
 
 #: syneditstrconst:syns_previewscrollinfofmt
 msgid "Page: %d"
-msgstr ""
+msgstr "Seite: %d"
 
 #: syneditstrconst:syns_filterpascal
 msgid "Pascal Files (*.pas,*.dpr,*.dpk,*.inc)|*.pas;*.dpr;*.dpk;*.inc"
-msgstr ""
+msgstr "Pascal-Quelltexte (*.pas,*.dpr,*.dpk,*.inc)|*.pas;*.dpr;*.dpk;*.inc"
 
 #: syneditstrconst:syns_filterperl
 msgid "Perl Files (*.pl,*.pm,*.cgi)|*.pl;*.pm;*.cgi"
-msgstr ""
+msgstr "Perl-Dateien (*.pl,*.pm,*.cgi)|*.pl;*.pm;*.cgi"
 
 #: syneditstrconst:syns_filterprogress
 msgid "Progress Files (*.w,*.p,*.i)|*.w;*.p;*.i"
-msgstr ""
+msgstr "Progress-Dateien (*.w,*.p,*.i)|*.w;*.p;*.i"
 
 #: syneditstrconst:syns_filterpython
 msgid "Python Files (*.py)|*.py"
-msgstr ""
+msgstr "Python-Dateien (*.py)|*.py"
 
 #: syneditstrconst:syns_exporterformatrtf
 msgid "RTF"
-msgstr ""
+msgstr "RTF"
 
 #: syneditstrconst:syns_filterrtf
 msgid "Rich Text Format (*.rtf)|*.rtf"
-msgstr ""
+msgstr "Rich-Text-Format (*.rtf)|*.rtf"
 
 #: syneditstrconst:syns_filtersql
 msgid "SQL Files (*.sql)|*.sql"
-msgstr ""
+msgstr "SQL-Dateien (*.sql)|*.sql"
 
 #: syneditstrconst:syns_filtersdd
 msgid "Semanta DD files (*.sdd)|*.sdd"
-msgstr ""
+msgstr "Semanta-DD-Dateien (*.sdd)|*.sdd"
 
 #: syneditstrconst:syns_eduplicateshortcut
 msgid "Shortcut already exists"
-msgstr ""
+msgstr "Kürzel ist bereits definiert"
 
 #: syneditstrconst:syns_filtersml
 msgid "Standard ML Files (*.sml)|*.sml"
-msgstr ""
+msgstr "Standard-ML-Dateien (*.sml)|*.sml"
 
 #: syneditstrconst:syns_filtertcltk
 msgid "Tcl/Tk Files (*.tcl)|*.tcl"
-msgstr ""
+msgstr "Tcl/Tk-Dateien (*.tcl)|*.tcl"
 
 #: syneditstrconst:syns_filtertex
 msgid "TeX Files (*.tex)|*.tex"
-msgstr ""
+msgstr "TeX-Dateien (*.tex)|*.tex"
 
 #: syneditstrconst:syns_duplicateshortcutmsg
 msgid "The keystroke \"%s\" is already assigned to another editor command. (%s)"
-msgstr ""
+msgstr "Der Tastendruck \"%s\" ist bereits einer anderen Editorfunktion zugewiesen. (%s)"
 
 #: syneditstrconst:syns_scrollinfofmttop
 msgid "Top Line: %d"
-msgstr ""
+msgstr "Oberste Zeile: %d"
 
 #: syneditstrconst:syns_filterunixshellscript
 msgid "UNIX Shell Scripts (*.sh)|*.sh"
-msgstr ""
+msgstr "Unix-Shellskripten (*.sh)|*.sh"
 
 #: syneditstrconst:syns_filtervbscript
 msgid "VBScript Files (*.vbs)|*.vbs"
-msgstr ""
+msgstr "VBScript-Dateien (*.vbs)|*.vbs"
 
 #: syneditstrconst:syns_filtervisualbasic
 msgid "Visual Basic Files (*.bas)|*.bas"
-msgstr ""
+msgstr "Visual-Basic-Quelltexte (*.bas)|*.bas"
 
 #: syneditstrconst:syns_filterxml
 msgid "XML Document (*.xml,*.xsd,*.xsl,*.xslt,*.dtd)|*.xml;*.xsd;*.xsl;*.xslt;*.dtd"
-msgstr ""
+msgstr "XML-Dokumente (*.xml,*.xsd,*.xsl,*.xslt,*.dtd)|*.xml;*.xsd;*.xsl;*.xslt;*.dtd"
 
 #: syneditstrconst:syns_filterx86asm
 msgid "x86 Assembly Files (*.asm)|*.ASM"
-msgstr ""
+msgstr "x86-Assemblerdateien (*.asm)|*.ASM"
 
