--- a/components/synedit/languages/synmacrorecorder.de.po
+++ b/components/synedit/languages/synmacrorecorder.de.po
@@ -1,16 +1,27 @@
+msgid ""
+msgstr ""
+"Project-Id-Version: \n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: 2005-08-26 16:52+0100\n"
+"Last-Translator: Jörg Braun <jb@toolbox-mag.de>\n"
+"Language-Team: \n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
+"Content-Transfer-Encoding: 8bit\n"
+
 #: synmacrorecorder:scannotpause
 msgid "Can only pause when recording"
-msgstr ""
+msgstr "Kann nur bei der Aufnahme pausieren"
 
 #: synmacrorecorder:scannotresume
 msgid "Can only resume when paused"
-msgstr ""
+msgstr "Kann nur bei der Pause wiederaufnehmen"
 
 #: synmacrorecorder:scannotplay
 msgid "Cannot playback macro when recording"
-msgstr ""
+msgstr "Kann Makro bei der Aufnahme nicht abspielen"
 
 #: synmacrorecorder:scannotrecord
 msgid "Cannot record macro when recording"
-msgstr ""
+msgstr "Kann Makro bei der Aufnahme nicht aufnehmen"
 
