fix language and document patch address
 SVN 7593@trunk

--- a/README
+++ b/README
@@ -59,7 +59,8 @@ How to help lazarus:
 
 If you find bugs, don't hesitate to use the bug tracking tool at the website,
 or send an email to the list.
-Patches can be send as .zip or .tgz attachments directly to the mailing list.
+Patches can be sent as .zip or .tgz attachments directly to the mailing list if
+small, or (preferably) to patch@dommelstein.net.
 
 
 
