--- a/components/codetools/languages/codetools.de.po
+++ b/components/codetools/languages/codetools.de.po
@@ -3,10 +3,10 @@ msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: 2005-08-28 16:23+0100\n"
-"Last-Translator: Jörg Braun <jb@toolbox-mag.de>\n"
+"Last-Translator: JÃ¶rg Braun <jb@toolbox-mag.de>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso-8859-1\n"
+"Content-Type: text/plain; charset=UTF8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: codetoolsstrconsts:ctsothercompilerdefines
@@ -27,11 +27,11 @@ msgstr "%s erwartet aber %s gefunden"
 
 #: codetoolsstrconsts:ctsfilehascircularsymlink
 msgid "%s has a circular symbolic link"
-msgstr "%s enthält einen zirkulären symbolischen Link"
+msgstr "%s enthÃ¤lt einen zirkulÃ¤ren symbolischen Link"
 
 #: codetoolsstrconsts:ctsfileisnotexecutable
 msgid "%s is not executable"
-msgstr "%s ist nicht ausführbar"
+msgstr "%s ist nicht ausfÃ¼hrbar"
 
 #: codetoolsstrconsts:ctsawithoutb
 msgid "%s without %s"
@@ -147,7 +147,7 @@ msgstr "Prozessortyp angeben"
 
 #: codetoolsstrconsts:ctsdefsforlazarussources
 msgid "Definitions for the Lazarus Sources"
-msgstr "Definitionen für die Lazarus-Quellen"
+msgstr "Definitionen fÃ¼r die Lazarus-Quellen"
 
 #: codetoolsstrconsts:ctsdesignerdirectory
 msgid "Designer Directory"
@@ -167,11 +167,11 @@ msgstr "Ende des Quelltexts nicht gefunden"
 
 #: codetoolsstrconsts:ctsforward
 msgid "Forward"
-msgstr "Vorwärts"
+msgstr "VorwÃ¤rts"
 
 #: codetoolsstrconsts:ctsforwardclassdefinitionnotresolved
 msgid "Forward class definition not resolved: %s"
-msgstr "Vorwärts gerichtete Klassendefinition nicht aufgelöst: %s"
+msgstr "VorwÃ¤rts gerichtete Klassendefinition nicht aufgelÃ¶st: %s"
 
 #: codetoolsstrconsts:ctsfreepascalcompilerinitialmacros
 msgid "Free Pascal Compiler initial macros"
@@ -223,7 +223,7 @@ msgstr ""
 
 #: codetoolsstrconsts:ctsincludecircledetected
 msgid "Include circle detected"
-msgstr "Zirkuläres Include ermittelt"
+msgstr "ZirkulÃ¤res Include ermittelt"
 
 #: codetoolsstrconsts:ctsinstalldirectory
 msgid "Install Directory"
@@ -247,11 +247,11 @@ msgstr "Geschachtelte Kommentare An"
 
 #: codetoolsstrconsts:ctsnoscanneravailable
 msgid "No scanner available"
-msgstr "Kein Scanner verfügbar"
+msgstr "Kein Scanner verfÃ¼gbar"
 
 #: codetoolsstrconsts:ctsnoscannerfound
 msgid "No scanner found for \"%s\". If this is an include file, please open the main source first."
-msgstr "Kein Scanner für \"%s\" gefunden. Wenn das eine Include-Datei ist, öffnen Sie bitte zuerst die Haupt-Quelltextdatei."
+msgstr "Kein Scanner fÃ¼r \"%s\" gefunden. Wenn das eine Include-Datei ist, Ã¶ffnen Sie bitte zuerst die Haupt-Quelltextdatei."
 
 #: codetoolsstrconsts:ctspackagedirectories
 msgid "Package directories"
@@ -275,7 +275,7 @@ msgstr "Stelle nicht im Quelltext"
 
 #: codetoolsstrconsts:ctsresetalldefines
 msgid "Reset all defines"
-msgstr "Alle Angaben zurücksetzen"
+msgstr "Alle Angaben zurÃ¼cksetzen"
 
 #: codetoolsstrconsts:ctsruntimelibrary
 msgid "Runtime library"
@@ -327,11 +327,11 @@ msgstr "\"%s\" nicht gefunden"
 
 #: codetoolsstrconsts:ctsclassofdefinitionnotresolved
 msgid "\"class of\" definition not resolved: %s"
-msgstr "Die Definition \"Class of\" ist nicht aufgelöst: %s"
+msgstr "Die Definition \"Class of\" ist nicht aufgelÃ¶st: %s"
 
 #: codetoolsstrconsts:ctsendforclassnotfound
 msgid "\"end\" for class/object not found"
-msgstr "\"end\" für Klasse/Objekt nicht gefunden"
+msgstr "\"end\" fÃ¼r Klasse/Objekt nicht gefunden"
 
 #: codetoolsstrconsts:ctsdircomponentdoesnotexistsorisdanglingsymlink
 msgid "a directory component in %s does not exist or is a dangling symlink"
@@ -343,7 +343,7 @@ msgstr "ein Verzeichniseintrag in %s ist kein Verzeichnis"
 
 #: codetoolsstrconsts:ctsaddsdirtosourcepath
 msgid "adds %s to SrcPath"
-msgstr "fügt %s dem Quellpfad hinzu"
+msgstr "fÃ¼gt %s dem Quellpfad hinzu"
 
 #: codetoolsstrconsts:ctsanlclproject
 msgid "an LCL project"
@@ -359,7 +359,7 @@ msgstr "Basistyp von \"%s\" nicht gefunden"
 
 #: codetoolsstrconsts:ctsbinaryoperator
 msgid "binary operator"
-msgstr "Binärer Operator"
+msgstr "BinÃ¤rer Operator"
 
 #: codetoolsstrconsts:ctsbracketnotfound
 msgid "bracket %s not found"
@@ -367,15 +367,15 @@ msgstr "Klammer %s nicht gefunden"
 
 #: codetoolsstrconsts:ctsbracketcloseexpectedbutatomfound
 msgid "bracket close expected, but %s found"
-msgstr "schließende Klammer erwartet aber %s gefunden"
+msgstr "schlieÃŸende Klammer erwartet aber %s gefunden"
 
 #: codetoolsstrconsts:ctsbracketopenexpectedbutatomfound
 msgid "bracket open expected, but %s found"
-msgstr "öffnende Klammer erwartet aber %s gefunden"
+msgstr "Ã¶ffnende Klammer erwartet aber %s gefunden"
 
 #: codetoolsstrconsts:ctscircleindefinitions
 msgid "circle in definitions"
-msgstr "zirkuläre Definitionen"
+msgstr "zirkulÃ¤re Definitionen"
 
 #: codetoolsstrconsts:ctsclassnotfound
 msgid "class %s%s%s not found"
@@ -399,7 +399,7 @@ msgstr "Konstante"
 
 #: codetoolsstrconsts:ctscursorposoutsideofcode
 msgid "cursor pos outside of code"
-msgstr "Cursorposition außerhalb des Codes"
+msgstr "Cursorposition auÃŸerhalb des Codes"
 
 #: codetoolsstrconsts:ctsdefaultclassancestortobjectnotfound
 msgid "default class ancestor TObject not found"
@@ -439,7 +439,7 @@ msgstr "Fehler beim Generieren eines neuen Prozedur-Rumpfs"
 
 #: codetoolsstrconsts:ctserrorduringinsertingnewclassparts
 msgid "error during inserting new class parts"
-msgstr "Fehler beim Einfügen eines neuen Klassenteils"
+msgstr "Fehler beim EinfÃ¼gen eines neuen Klassenteils"
 
 #: codetoolsstrconsts:ctserrorindirectiveexpression
 msgid "error in directive expression"
@@ -451,7 +451,7 @@ msgstr "Fehler in der Parameterliste"
 
 #: codetoolsstrconsts:ctsexecuteaccessdeniedforfile
 msgid "execute access denied for %s"
-msgstr "ausführbarer Zugriff auf %s abgelehnt"
+msgstr "ausfÃ¼hrbarer Zugriff auf %s abgelehnt"
 
 #: codetoolsstrconsts:ctsendofsourceexpectedbutatomfound
 msgid "expected end., but %s found"
@@ -463,7 +463,7 @@ msgstr "Exports-Klausel nicht in Bibliotheken erlaubt"
 
 #: codetoolsstrconsts:ctsexprtypemustbeclassorrecord
 msgid "expression type must be class or record type"
-msgstr "Typ des Ausdrucks muß eine Klasse oder ein Record sein"
+msgstr "Typ des Ausdrucks muÃŸ eine Klasse oder ein Record sein"
 
 #: codetoolsstrconsts:ctsfiledoesnotexists
 msgid "file \"%s\" does not exist"
@@ -471,7 +471,7 @@ msgstr "Datei \"%s\" ist nicht vorhanden"
 
 #: codetoolsstrconsts:ctsfileisreadonly
 msgid "file is read only"
-msgstr "Datei ist schreibgeschützt"
+msgstr "Datei ist schreibgeschÃ¼tzt"
 
 #: codetoolsstrconsts:ctsgnomeintfdirectory
 msgid "gnome interface directory"
@@ -491,7 +491,7 @@ msgstr "Bezeichner erwartet aber %s gefunden"
 
 #: codetoolsstrconsts:ctsidentexpectedbutkeywordfound
 msgid "identifier expected, but keyword %s found"
-msgstr "Bezeichner erwartet aber Schlüsselwort %s gefunden"
+msgstr "Bezeichner erwartet aber SchlÃ¼sselwort %s gefunden"
 
 #: codetoolsstrconsts:ctsidentifiernotfound
 msgid "identifier not found: %s"
@@ -499,7 +499,7 @@ msgstr "Bezeichner nicht gefunden: %s"
 
 #: codetoolsstrconsts:ctsillegalcircleinusedunits
 msgid "illegal circle using unit: %s"
-msgstr "illegale Zirkuläreinbindung mit der Unir: %s"
+msgstr "illegale ZirkulÃ¤reinbindung mit der Unir: %s"
 
 #: codetoolsstrconsts:ctsillegalqualifier
 msgid "illegal qualifier %s found"
@@ -531,7 +531,7 @@ msgstr "Indexangabe redefiniert"
 
 #: codetoolsstrconsts:ctsinheritedkeywordonlyallowedinmethods
 msgid "inherited keyword only allowed in methods"
-msgstr "Das Schlüsselwort \"inherited\" ist nur in Methoden zulässig"
+msgstr "Das SchlÃ¼sselwort \"inherited\" ist nur in Methoden zulÃ¤ssig"
 
 #: codetoolsstrconsts:ctsinsufficientmemory
 msgid "insufficient memory"
@@ -547,47 +547,47 @@ msgstr "Interface-Abschnitt nicht gefunden"
 
 #: codetoolsstrconsts:ctsinvalidclassname2
 msgid "invalid class name %s%s%s"
-msgstr "ungültiger Klassenname %s%s%s"
+msgstr "ungÃ¼ltiger Klassenname %s%s%s"
 
 #: codetoolsstrconsts:ctsinvalidclassname
 msgid "invalid class name=%s%s%s"
-msgstr "ungültiger Klassenname=%s%s%s"
+msgstr "ungÃ¼ltiger Klassenname=%s%s%s"
 
 #: codetoolsstrconsts:ctsinvalidflagvaluefordirective
 msgid "invalid flag value \"%s\" for directive %s"
-msgstr "ungültiges Flag \"%s\" bei Direktive %s"
+msgstr "ungÃ¼ltiges Flag \"%s\" bei Direktive %s"
 
 #: codetoolsstrconsts:ctsinvalidmode
 msgid "invalid mode \"%s\""
-msgstr "ungültiger Mode \"%s\""
+msgstr "ungÃ¼ltiger Mode \"%s\""
 
 #: codetoolsstrconsts:ctsinvalidsubrange
 msgid "invalid subrange"
-msgstr "ungültiger Teilbereich"
+msgstr "ungÃ¼ltiger Teilbereich"
 
 #: codetoolsstrconsts:ctsinvalidtype
 msgid "invalid type"
-msgstr "ungültiger Typ"
+msgstr "ungÃ¼ltiger Typ"
 
 #: codetoolsstrconsts:ctsinvalidvariablename
 msgid "invalid variable name %s%s%s"
-msgstr "ungültiger Variablenname %s%s%s"
+msgstr "ungÃ¼ltiger Variablenname %s%s%s"
 
 #: codetoolsstrconsts:ctsinvalidvariabletype
 msgid "invalid variable type %s%s%s"
-msgstr "ungültiger Variablentyp %s%s%s"
+msgstr "ungÃ¼ltiger Variablentyp %s%s%s"
 
 #: codetoolsstrconsts:ctskeyword
 msgid "keyword"
-msgstr "Schlüsselwort"
+msgstr "SchlÃ¼sselwort"
 
 #: codetoolsstrconsts:ctskeywordexampleexpectedbutatomfound
 msgid "keyword (e.g. %s) expected, but %s found"
-msgstr "Schlüsselwort (z.B. %s) erwartet aber %s gefunden"
+msgstr "SchlÃ¼sselwort (z.B. %s) erwartet aber %s gefunden"
 
 #: codetoolsstrconsts:ctskeywordin
 msgid "keyword \"in\""
-msgstr "Schlüsselwort \"in\""
+msgstr "SchlÃ¼sselwort \"in\""
 
 #: codetoolsstrconsts:ctslazarusmaindirectory
 msgid "lazarus main directory"
@@ -607,7 +607,7 @@ msgstr "fehlender Punkt nach end"
 
 #: codetoolsstrconsts:ctsmissingenumlist
 msgid "missing enum list"
-msgstr "Fehlende Aufzählungsliste"
+msgstr "Fehlende AufzÃ¤hlungsliste"
 
 #: codetoolsstrconsts:ctsmissingtypeidentifier
 msgid "missing type identifier"
@@ -679,7 +679,7 @@ msgstr "Quelltext nicht gefunden: Unit %s"
 
 #: codetoolsstrconsts:ctssrcpathforcompiledunits
 msgid "src path for compiled units"
-msgstr "Quellpfad für kompilierte Units"
+msgstr "Quellpfad fÃ¼r kompilierte Units"
 
 #: codetoolsstrconsts:ctsstringconstant
 msgid "string constant"
@@ -695,11 +695,11 @@ msgstr "Typabschnitt der Klasse nicht gefunden"
 
 #: codetoolsstrconsts:ctsunabletoapplychanges
 msgid "unable to apply changes"
-msgstr "kann Änderungen nicht übernehmen"
+msgstr "kann Ã„nderungen nicht Ã¼bernehmen"
 
 #: codetoolsstrconsts:ctsunabletocompleteproperty
 msgid "unable to complete property"
-msgstr "kann Eigenschaft nicht ergänzen"
+msgstr "kann Eigenschaft nicht ergÃ¤nzen"
 
 #: codetoolsstrconsts:ctsidentexpectedbuteoffound
 msgid "unexpected end of file (identifier expected)"
@@ -711,23 +711,23 @@ msgstr "unerwartetes Ende des Quelltexts"
 
 #: codetoolsstrconsts:ctsunexpectedkeyword
 msgid "unexpected keyword \"%s\""
-msgstr "unerwartetes Schlüsselwort \"%s\""
+msgstr "unerwartetes SchlÃ¼sselwort \"%s\""
 
 #: codetoolsstrconsts:ctsunexpectedkeywordwhilereadingbackwards
 msgid "unexpected keyword \"%s\" found while reading blocks backwards"
-msgstr "unerwartetes Schlüsselwort \"%s\" beim Rückwärtslesen der Blocks gefunden"
+msgstr "unerwartetes SchlÃ¼sselwort \"%s\" beim RÃ¼ckwÃ¤rtslesen der Blocks gefunden"
 
 #: codetoolsstrconsts:ctsunexpectedkeywordinasmblock
 msgid "unexpected keyword \"%s\" in asm block found"
-msgstr "unerwartetes Schlüsselwort \"%s\" im Assemblerblock gefunden"
+msgstr "unerwartetes SchlÃ¼sselwort \"%s\" im Assemblerblock gefunden"
 
 #: codetoolsstrconsts:ctsunexpectedkeywordinbeginendblock
 msgid "unexpected keyword \"%s\" in begin..end found"
-msgstr "unerwartetes Schlüsselwort \"%s\" in Begin..End gefunden"
+msgstr "unerwartetes SchlÃ¼sselwort \"%s\" in Begin..End gefunden"
 
 #: codetoolsstrconsts:ctsunexpectedsubrangeoperatorfound
 msgid "unexpected subrange operator '..' found"
-msgstr "ungültigen Unterbereichsoperator '..' gefunden"
+msgstr "ungÃ¼ltigen Unterbereichsoperator '..' gefunden"
 
 #: codetoolsstrconsts:ctsunitnotfound
 msgid "unit not found: %s"
@@ -735,7 +735,7 @@ msgstr "Unit nicht gefunden: %s"
 
 #: codetoolsstrconsts:ctsunknownsectionkeyword
 msgid "unknown section keyword %s found"
-msgstr "ungültiges Bereichsschlüsselwort %s gefunden"
+msgstr "ungÃ¼ltiges BereichsschlÃ¼sselwort %s gefunden"
 
 #: codetoolsstrconsts:ctsusedunitisnotapascalunit
 msgid "used unit is not a pascal unit"
