--- a/components/synedit/languages/synedit.de.po
+++ b/components/synedit/languages/synedit.de.po
@@ -3,10 +3,10 @@ msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: 2005-08-26 18:29+0100\n"
-"Last-Translator: Jörg Braun <jb@toolbox-mag.de>\n"
+"Last-Translator: JÃ¶rg Braun <jb@toolbox-mag.de>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso-8859-1\n"
+"Content-Type: text/plain; charset=UTF8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: syneditstrconst:syns_scrollinfofmt
@@ -179,7 +179,7 @@ msgstr "Semanta-DD-Dateien (*.sdd)|*.sdd"
 
 #: syneditstrconst:syns_eduplicateshortcut
 msgid "Shortcut already exists"
-msgstr "Kürzel ist bereits definiert"
+msgstr "KÃ¼rzel ist bereits definiert"
 
 #: syneditstrconst:syns_filtersml
 msgid "Standard ML Files (*.sml)|*.sml"
